--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,14 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    implementation 'com.jakewharton.timber:timber:4.7.0'
+
+    implementation 'com.arello-mobile:moxy:1.5.3'
+    implementation 'com.arello-mobile:moxy-app-compat:1.5.3'
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.1.9"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+
 }
