--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'realm-android'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "ru.leonidivankin.photovkapp"
+        applicationId "ru.leonidivankin.photoapp"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
