--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,12 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
 
 
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    testImplementation 'org.mockito:mockito-core:2.8.47'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.6.0'
+    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+    testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.13'
 }
