--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".view.mainactivity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:windowSoftInputMode="stateHidden"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.photoactivity.PhotoActivity"></activity>
+        <activity android:name=".view.photoactivity.PhotoActivity" />
     </application>
 
 </manifest>
